--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,16 +6,16 @@
   --color-red-light:hsl(346,87%,45%,15%);
   --color-green:#00c476;
   --color-green-light:hsl(156,100%,38%,15%);
-  --color-gray-900:#1e1e66;
+  --color-gray-900:#28CC82;
   --color-gray-700:#2d2b7c;
   --color-gray-300:rgba(242,242,254,0.3);
-  --color-gray-200:rgba(242,242,254,0.7);
-  --color-white:#f2f2fe;
+  --color-gray-200:black;
+  --color-white:#B9B8D3;
   --color-bg:#0f0f3e;
 
   --transition: all 300ms ease ;
 
-  --container-width-lg:74%;
+  --container-width-lg:85%;
   --container-width-md:88%;
   --form-width:40%;
 
@@ -26,6 +26,10 @@
   --card-border-radius-5: 5rem;
   --amazing-border-radius :48% 52% 51% 49% / 100% 3% 97% 0%  ;
 
+
+  /* meine  */
+ 
+  --underline-color: #50D8D7;
 }
 
 
@@ -46,7 +50,7 @@ body{
   line-height:1.6;
   color: var(--color-gray-200);
   overflow-x: hidden;
-  background: #014421;
+  /* background: #014421; */
   font-size: 0.9rem;
 }
 .container{
@@ -62,7 +66,7 @@ section {
   margin-top: 7rem;
 }
 h1 , h2 , h3 , h4 , h5 {
-  color: var(--color-white);
+  color: black;
   line-height: 1.3;
 
 }
@@ -83,10 +87,23 @@ h4 {
   font-size: 1rem;
 }
 a{
-  color: var(--color-white);
+  color: Black;
+  font-weight: bold;
   transition: var(--transition);
+}
+.underline {
+  width: 90%;
+  height: 2px;
+  margin:auto;
+  background-color:var(--underline-color);
+  opacity:0;
+  transition: var(--transition);
+  border-radius: 5px;
 
 }
+li:hover .underline{
+opacity: 80%;}
+
 img {
   display: block;
   width: 100%;
@@ -96,16 +113,16 @@ img {
 /* end of general classes */
 
 nav{
-  background: #444C38;
+  background: #fff;
   width: 100%;
   height: 4.5rem;
   position: fixed;
   top: 0;
   z-index: 10;
-  box-shadow: 0 1rem 1rem rgba(0,0,0,0.2);
+  box-shadow: 0 5px 0.5rem rgba(0,0,0,0.2);
 }
 nav button {
-  display: none;
+  display: none ;
 
 }
 .nav_container {
@@ -122,8 +139,7 @@ nav button {
   border: 0.1rem solid var(--color-bg);
 }
 .nav_logo {
-  font-weight: 600;
-  font-size: 1.2rem;
+  width: 200px;
 }
 .nav_items {
   display: flex;
@@ -140,7 +156,7 @@ nav button {
   right: 0;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 3rem 3rem rgba(0,0,0,0.4) ;
+  box-shadow: -5px 7px 30px -10px rgba(80, 216, 215, 0.8)  ;
   visibility: hidden;
   opacity: 0;
   transition: var(--transition);
@@ -148,18 +164,24 @@ nav button {
 
 /* show nav ul when nav profile is hovered */
 .nav_profile:hover > ul {
-  visibility:visible;
+  visibility: visible;
   opacity: 1;
+  background-color: none;
+}
+.nav_profile ul li {
+  border-radius: 10px;
+
 }
 .nav_profile ul li a {
   padding: 1rem;
-  background: var(--color-gray-900);
+  background:  #CBD2D0;
   display: block;
   width: 100%;
 }
 .nav_profile ul li:last-child a{
   background:var(--color-red) ;
   color: var(--color-bg);
+  
 }
 
 /* category button  */
@@ -178,8 +200,8 @@ nav button {
 }
 /* general post  */
 .post_thumbnail {
-  border-radius:var(--amazing-border-radius);
-  border: 0.5rem solid #39FF14;
+  border-radius:10px;
+  border: 2px solid #c76ef3;
   overflow: hidden;
   margin-bottom: 1.6rem;
 
@@ -204,12 +226,16 @@ transition: filter 500ms ease;
 /* featured */
 .featured {
   margin-top: 8rem;
-
 }
 .featured_container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 4rem;
+  border: 2px solid rgb(0, 162, 255);
+  box-shadow: -4px 4px 5px   rgba(0, 0,0, 0.7);
+  padding-top: 20px;
+  padding-inline: 20px;
+  border-radius: 5px;
 }
 .featured .post_thumbnail {
   height: fit-content;
@@ -222,12 +248,19 @@ transition: filter 500ms ease;
   gap: 5rem;
   margin-bottom: 5rem;
 }
+.posts_container .post{
+  border: 1px solid #ccc;
+  border-radius: 7px;
+  padding: 10px;
+  box-shadow: -4px 4px 5px rgba(0, 0,0, 0.7);
+}
 /* category buttons */
 .category_buttons {
-  background: #00674b;
+  background: linear-gradient(70.6deg, rgb(172, 30, 255) 0.3%, rgb(65, 35, 251) 55.8%, rgb(35, 251, 224) 105.1%);
+
   padding: 4rem 0;
-  border-top: 2px solid #01411C;
-  border-bottom: 2px solid #01796F;
+  border-top: 2px solid rgb(35, 251, 224);
+  /* border-bottom: 2px solid rgb(172, 30, 255); */
 
 }
 .category_buttons-container {
@@ -241,41 +274,46 @@ transition: filter 500ms ease;
 
 /* start the footer */
 footer {
-  background: #004953;
-  padding: 5rem 0 0 ;
-  box-shadow:inset 0 1.5rem 1.5rem rgba(0,0,0,0.2) ;
+  background: white;
+  padding: 2rem 0 0 ;
+  box-shadow:inset 0 0 1rem rgba(0,0,0,0.2) ;
+  border-top: 1px solid var(--color-bg);
 
 }
 .footer_socials {
   margin-inline: auto;
   width: fit-content;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 1.2rem;
 }
 .footer_socials a {
-  background: #4D5D53;
+  background: #0c9999;
   border-radius: 50%;
   width: 2.3rem;
   height: 2.3rem;
   display: flex;
   align-items: center;
   justify-content: center;
-
+  color: white;
 }
 .footer_socials a:hover {
-  background: var(--color-white);
-  color: var(--color-bg);
+  background: #ccc;
+  color: rgb(152, 12, 207);
 
 }
 .footer_container {
   display: grid;
   grid-template-columns: repeat(4,1fr);
 }
+.footer_container .logoF  {
+  width: 200px;
+}
+
   footer h4 {
-color: var(--color-white);
+    color: black;
 margin-bottom: 0.6rem;
   }
   footer ul li {
@@ -291,9 +329,14 @@ margin-bottom: 0.6rem;
   }
   .footer_copyright {
     text-align: center;
-    padding: 1.5rem 0 ;
-    border-top: 2px solid var(--color-bg);
-    margin-top: 4rem;
+    padding: 1rem 0 ;
+    border-top: 1px solid var(--color-bg);
+    margin-top: 2rem;
+    color: black;
+    font-size: 1rem;
+    box-shadow:inset 0 0 1rem rgba(0,0,0,0.2) ;
+    font-weight: 500;
+
   }
 
   /* search panel */
@@ -304,7 +347,7 @@ margin-bottom: 0.6rem;
 .search_bar-container {
   width: 30rem;
   position: relative;
-  background: #013220;
+  background-image: linear-gradient(to bottom right, #6d51a5, #e4a7c5);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -312,7 +355,7 @@ margin-bottom: 0.6rem;
   overflow: hidden;
   padding: 0.6rem 1rem;
   border-radius: var(--card-border-radius-2);
-  color: var(--color-gray-300);
+  color: black;
 }
 .search_bar-container > div {
   width: 100%;
@@ -325,10 +368,15 @@ margin-bottom: 0.6rem;
   margin-left: 0.7rem;
   padding: 0.5rem 0;
   width: 100%;
+  padding-inline: 10px ;
 }
 .search_bar input::placeholder {
-  color:var(--color-gray-300);
+  color:black;
+  font: bold;
+
+
 }
+
   /* end search panel */
   /* button style */
   .btn {
@@ -362,8 +410,10 @@ margin-bottom: 0.6rem;
   }
   .singlepost_container {
     width: var(--form-width);
-    background: var(--color-gray-900);
+    /* background: var(--color-gray-900); */
     padding: 1rem 2rem 3rem;
+    border: 1px #ccc solid ;
+    border-radius: 10px;
   }
 
   .singlepost_thumbnail{
@@ -377,9 +427,10 @@ margin-bottom: 0.6rem;
 
   /* category posts */
   .category_title{
-    height: 15rem;
+    height:10rem;
     margin-top: 4.5rem;
-    background: #808000;
+    background: rgb(174,238,237);
+    background: radial-gradient(circle, rgba(174,238,237,1) 0%, rgba(217,148,233,1) 100%);
     display: grid;
     place-items: center;
 
@@ -402,6 +453,9 @@ margin-bottom: 0.6rem;
   }
   .form_section-container {
     width: var(--form-width);
+  }
+  .form_section-container small {
+    font-weight: 700;
   }
   .alert_message {
     padding: 0.8rem 1.4rem;
@@ -436,10 +490,12 @@ margin-bottom: 0.6rem;
   }
 input, textarea, select {
   padding: 0.8rem;
-  background-color: var(--color-gray-900);
+  background-color: transparent;
   border-radius: var(--card-border-radius-2);
   resize:none;
-  color: var(--color-white);
+  color: black;
+  border: 1px solid rosybrown;
+  box-shadow: 0 0 5px rgb(246, 255, 0);
 }
 .form_section small {
   margin-top: 1rem;
