--- a/CSS/mediaQ.css
+++ b/CSS/mediaQ.css
@@ -156,9 +156,16 @@
   display: flex;
   flex-direction: column;
 }
+.dashboard main table td{
+  color: black;
+
+}
+
 .dashboard main table tr:nth-child(even){
   background: var(--color-gray-900);
-
+}
+.dashboard main table tr:nth-child(even) td {
+  color: white;
 }
 .dashboard main table tr:hover td {
   background: transparent;
@@ -238,22 +245,29 @@ h1 {
   height: 100vh;
   transition: var(--transition);
   background: var(--color-primary);
+  z-index:10 ;
 }
 .dashboard .sidebar_toggle{
-  display: inline-block;
-  background: var(--color-primary-variant);
-  color: var(--color-white);
-  position: fixed;
-  right: 0;
-  z-index: 1;
-  bottom: 4rem;
-  width: 2rem;
-  height: 2rem;
-  border-radius:45% 0 0 42% ;
+display: inline-block;
+background: var(--color-primary);
+color: white;
+position: fixed;
+right: 0;
+z-index: 1;
+bottom: 4rem;
+width: 2rem;
+height: 2rem;
+border-radius:20% 0 0 20% ;
 font-size: 1.3rem;
 cursor: pointer;
-box-shadow: -1rem 0 2rem rgba(0,0,0,0.4);
+box-shadow: 0 0 5px rgb(187, 6, 237);
 }
+.dashboard .sidebar_toggle i {
+  position: absolute;
+  top: 25%;
+  left: 25%;
+}
+
 .dashboard aside a h5 {
   display: inline-block;
 }
