--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 :root{
-  --color-primary:#6082B6;
+  --color-primary:#6101ee;
   --color-primary-light: #B2BEB5;
   --color-primary-variant: #5854c7;
-  --color-red:#da0f3f;
+  --color-red:#fa0808;
   --color-red-light:hsl(346,87%,45%,15%);
   --color-green:#00c476;
   --color-green-light:hsl(156,100%,38%,15%);
-  --color-gray-900:#28CC82;
+  --color-gray-900:#b61661;
   --color-gray-700:#2d2b7c;
   --color-gray-300:rgba(242,242,254,0.3);
   --color-gray-200:black;
@@ -46,9 +47,10 @@
 }
 
 body{
-  font-family: "montserrat" , sans-serif;
+  font-family: "Lato", sans-serif;
   line-height:1.6;
-  color: var(--color-gray-200);
+  /* color: var(--color-gray-200); */
+
   overflow-x: hidden;
   /* background: #014421; */
   font-size: 0.9rem;
@@ -355,7 +357,7 @@ margin-bottom: 0.6rem;
   overflow: hidden;
   padding: 0.6rem 1rem;
   border-radius: var(--card-border-radius-2);
-  color: black;
+  color: white;
 }
 .search_bar-container > div {
   width: 100%;
@@ -363,15 +365,20 @@ margin-bottom: 0.6rem;
   align-items: center;
 
 }
-.search_bar input {
+.search_bar input { 
   background:transparent;
   margin-left: 0.7rem;
   padding: 0.5rem 0;
   width: 100%;
   padding-inline: 10px ;
+  color: white;
+}
+.search_bar input:hover {
+  border: 1px solid rosybrown;
+  box-shadow: 0 0 5px rgb(246, 255, 0);
 }
 .search_bar input::placeholder {
-  color:black;
+  color:white;
   font: bold;
 
 
@@ -387,10 +394,10 @@ margin-bottom: 0.6rem;
     border-radius: var(--card-border-radius-2);
     cursor: pointer;
     transition: var(--transition);
-    color: var(--color-white);
+    color:white;
     
   }
-  .btn .sm {
+  .btn .sn {
     padding: 0.3rem 0.7rem;
     font-size:0.8rem ;
 
@@ -497,6 +504,10 @@ input, textarea, select {
   border: 1px solid rosybrown;
   box-shadow: 0 0 5px rgb(246, 255, 0);
 }
+.search_input{
+  box-shadow: none;
+  border: none;
+}
 .form_section small {
   margin-top: 1rem;
   display: block;
@@ -522,14 +533,19 @@ input, textarea, select {
   background: var(--color-gray-900);
   padding: 2rem;
   margin-bottom: 5rem;
-
+  border-radius: 10px;
 }
+
 .dashboard aside a {
   background-color: var(--color-primary);
   display: flex;
   gap: 1rem;
   align-items: center;
   padding: 1.6rem;
+  color: white;
+}
+.dashboard aside a h5 {
+  color: white;
 }
 .dashboard aside ul li:not(:last-child) a  {
   border-bottom: 1px solid var(--color-gray-900);
@@ -545,9 +561,10 @@ input, textarea, select {
   margin-left: 1.5rem;
 
 }
-.dashboard main h2 {
+.dashboard main h1 {
 margin: 0 0 2rem 0;
 line-height: 1;
+color: white;
 }
 .dashboard main table {
   width: 100%;
@@ -557,16 +574,20 @@ line-height: 1;
 .dashboard main table  th {
   background: var(--color-gray-700);
   padding: 0.8rem;
-  color:var(--color-white) ;
+  color:white ;
 
 }
-.dashboard main table td {
+.dashboard main table  td {
   padding: 0.8rem;
-  border-bottom: 1px solid var(--color-gray-200);
+  border-bottom: 1px solid white;
+  color: white;
 }
+
 .dashboard main table tr:hover td {
-  background-color: var(--color-bg);
-  color: var(--color-white);
+  /* background-color: var(--color-bg); */
+  background-color: #5b0a30;
+  /* color: white; */
   cursor: default;
   transition: var(--transition);
 }
+
