--- a/CSS/style.css
+++ b/CSS/style.css
@@ -134,11 +134,11 @@ nav button {
   justify-content: space-between;
 }
 .avatar {
-  width: 2.5rem;
-  height: 2.5rem;
+  width: 3rem;
+  height: 3rem;
   border-radius: 50%;
   overflow: hidden;
-  border: 0.1rem solid var(--color-bg);
+  border: 1.5px solid var(--color-bg);
 }
 .nav_logo {
   width: 200px;
@@ -198,7 +198,8 @@ nav button {
   text-align: center;
 }
 .category_button:hover {
-  color: var(--color-white);
+  /* color: var(--color-white); */
+  opacity: 70%;
 }
 /* general post  */
 .post_thumbnail {
@@ -236,6 +237,7 @@ transition: filter 500ms ease;
   border: 2px solid rgb(0, 162, 255);
   box-shadow: -4px 4px 5px   rgba(0, 0,0, 0.7);
   padding-top: 20px;
+  padding-bottom: 20px;
   padding-inline: 20px;
   border-radius: 5px;
 }
